# OukaroManager

./: .gitignore  LICENSE  README.md  build.py  module.prop  post-fs-data.sh  service.sh  test_server.py
.github/workflows/: build.yml
Draft/: ascii-art.txt
module/: .gitignore  action.sh  apps.json  config.toml  customize.sh  generate-config.sh  module.prop  mount.sh  oukaro  post-fs-data.sh  service.sh  set-permission.sh  unmount.sh  util.sh
module/webroot/: applist.js  config.json  index.html  script.js  scripts.js  styles.css
module/webroot/locales/: en.json  zh.json
okrmng/: Cargo.toml
okrmng/src/: cli.rs  config.rs  main.rs
oukaro/: Cargo.toml
oukaro/src/: config.rs  defs.rs  main.rs  utils.rs
src/: utils.rs
webroot/: index.html
webroot/locales/: en.json  zh.json
