[package]
name = "oukaro"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
env_logger = "0.11.8"
fs_extra = "1.3.0"
inotify = "0.11.0"
libc = "0.2.174"
log = "0.4.27"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["serde_derive"] }
toml = "0.9.5"

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
