[package]
name = "oukaro"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
env_logger = "0.11.8"
inotify = "0.11.0"
log = "0.4.28"
regex = "1.12.2"
rustix = { version = "1.1.2", features = ["mount"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
toml = "0.9.8"

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
